# file-viewer

./: AGENTS.md  Cargo.toml  justfile  patch.txt
src/: command_spec.rs  main.rs
src/commands/: mod.rs
src/keymaps/: command.rs  help.rs  mod.rs  normal.rs  search.rs  visual.rs
src/snapshots/: file_viewer__tests__after_ctrl_d.snap  file_viewer__tests__after_ctrl_u.snap  file_viewer__tests__colon_enters_command_mode.snap  file_viewer__tests__command_help_opens_help_screen.snap  file_viewer__tests__command_q_ui.snap  file_viewer__tests__help_screen.snap  file_viewer__tests__initial_ui_snapshot.snap  file_viewer__tests__overlay_render_inline.snap  file_viewer__tests__search_highlighting.snap  file_viewer__tests__slash_enters_search_mode.snap  file_viewer__tests__visual_line_mode_indicator.snap  file_viewer__tests__visual_mode_indicator.snap
tests/: e2e.rs  help.rs  ptcr.rs  pty.rs
