[package]
name = "file-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ratatui = { version = "0.29.0", features = ["crossterm"] }
clap = { version = "4.5.40", features = ["derive"] }
notify = "8.1.0"
regex = "1.11.1"
once_cell = "1.19.0"

[dev-dependencies]
insta = "1.43.1"
rexpect = "0.6.2"
tempfile = "3.20.0"
